fix color and alignment

--- a/services/app-web/src/components/Header/PublicNavigation/PublicNavigation.module.scss
+++ b/services/app-web/src/components/Header/PublicNavigation/PublicNavigation.module.scss
@@ -3,7 +3,7 @@
 
 .navigation {
     background-color: custom.$mcr-cmsblue-base;
-    border-top: 2px solid #8cafea;
+    border-top: 0.125rem solid custom.$mcr-periwinkle;
     position: relative;
     z-index: 1;
 }
@@ -11,6 +11,7 @@
 .navigationContainer {
     max-width: custom.$mcr-container-max-width-fixed;
     display: flex;
+    padding-left: 1rem;
 }
 
 .primaryNav {
@@ -58,10 +59,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 52px;
-    padding: 16px 16px 20px;
+    height: 3.25rem;
+    padding: 1rem 1rem 1.25rem;
     color: custom.$mcr-foundation-white !important;
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 700;
     line-height: 150%;
     text-decoration: none !important;
@@ -73,17 +74,21 @@
     
     &:hover {
         .navigationLabel::after {
-            background-color: #97d4ea;
+            background-color: custom.$mcr-blue-cool-light;
         }
     }
 
     &:active {
-        box-shadow: inset 0 0 0 4px #00bde3;
+        box-shadow: inset 0 0 0 0.25rem custom.$mcr-blue-vivid;
+
+        .navigationLabel::after {
+            background-color: transparent;
+        }
     }
 
     &:focus-visible {
-        outline: 2px solid custom.$mcr-foundation-white;
-        outline-offset: -2px;
+        outline: 0.125rem solid custom.$mcr-foundation-white;
+        outline-offset: -0.125rem;
     }
 }
 
@@ -96,15 +101,15 @@
         content: '';
         position: absolute;
         right: 0;
-        bottom: -20px;
+        bottom: -1.25rem;
         left: 0;
-        height: 4px;
+        height: 0.25rem;
         background-color: transparent;
     }
 }
 
 .navigationLinkActive .navigationLabel::after {
-    background-color: #00bde3;
+    background-color: custom.$mcr-cyan-vivid;
 }
 
 @include uswds.at-media-max('tablet') {
